2006-08-19 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.13.4 Released.
  * [gputils] Updated header files and linker scripts.
  * {gputils] Fixed UPPER to mask with 0xff instead of 0x3f.
  * [gpasm] Mask MOVLB with 0xf instead of 0xff.
  * [gpasm] Fixed default access bit for extended pic16e.

2005-12-19 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpasm] Fixed 18xx config bug when config the last section.

2005-10-13 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gputils] Fixed bsr boundary for 18f2455/2550/4455/4550.

2005-08-18 Borut Razem <borutr@users.sourceforge.net>
  * [gplib] Allow forward and back slashes as directory delimiters.

2005-08-03 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.13.3 Released.
  * [gpasm] Added more arity checks to bit special instruction mnemonics.

2005-08-03 Raphael Neider <tecodev@users.sourceforge.net>
  * [gplink] Allow processor mismatch warning to be disabled.

2005-07-25 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gplink] Changed order of stack and cinit functions to fix bugs.

2005-07-02 Scott Dattalo <scott@dattalo.com>
  * [gpasm] Quoted strings can now be passed in a .direct directive.

2005-06-14 Alain Portal <aportal AT univ-montp2 DOT fr>
  * [man] Updated French man pages.

2005-05-26 Alain Portal <aportal AT univ-montp2 DOT fr>
  * [man] Updated French man pages.

2005-05-22 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gplink] Remove dead sections from the object files.
  * [gplink] Added default linker path to search paths.

2005-05-18 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpasm] Check for divide by zero on modulo operator.

2005-05-11 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpstrip] Allow multiple input files.

2005-05-07 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpasm] Generate dependency file.

2005-05-06 Craig Franklin <craigfranklin@users.sourceforge.net>